<resources>
    <string name="app_name">ToDoList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Выход</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Calendar</string>
    <string name="menu_slideshow">Other Date</string>
    <string name="menu_tools">Add Note</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="btn_save">Save</string>
    <string name="note_delete_message">Удалить заметку?</string>
    <string name="note_delete_cancel">Нет</string>
    <string name="note_delete_ok">Да</string>
    <string name="logout_dialog_title">Выход</string>
    <string name="logout_dialog_message">Вы увурены,</string>
    <string name="logout_dialog_ok">Да</string>
    <string name="logout_dialog_cancel">Нет</string>
</resources>
