<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.nik.todolist.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_to_note"
            app:destination="@+id/nav_tools"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim">
            <argument
                android:name="note_id"
                app:argType="string" />
        </action>
        <action
            android:id="@+id/action_home_to_send"
            app:destination="@id/nav_send" />

    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.nik.todolist.ui.calendar.CalendarFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.nik.todolist.ui.otherDate.OtherDateFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_other_date" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.nik.todolist.ui.note.NoteFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_note" >
        <action
            android:id="@+id/action_note_to_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_share"
        android:name="com.nik.todolist.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.nik.todolist.ui.spalsh.SplashFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" >
        <action
            android:id="@+id/action_splash_to_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>